--- a/src/styles/css/partials/home.css
+++ b/src/styles/css/partials/home.css
@@ -1,4 +1,29 @@
-.jumbotron {
+.home .section1 {
+  /* The image used */
+  background-image: url("https://newevolutiondesigns.com/images/freebies/city-wallpaper-47.jpg");
+  /* Set a specific height */
+  height: 900px;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover; }
+.home .section2 {
+  /* The image used */
+  background-image: url("http://awallpapersimages.com/wp-content/uploads/2016/07/50-Free-HD-City-Wallpapers.jpg");
+  /* Set a specific height */
+  height: 900px;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; }
+.home .one {
+  display: inline-block;
+  width: 100vw;
+  margin-top: 100px;
+  background-size: cover; }
+.home .jumbotron {
+  background-color: rgba(0, 0, 0, 0.5); }
 
 /*# sourceMappingURL=home.css.map */
