--- a/src/styles/scss/partials/app.scss
+++ b/src/styles/scss/partials/app.scss
@@ -3,13 +3,7 @@
     display: flex;
     flex-direction: row;
     align-items: baseline;
-    .logo {
-      h1 {
-        width: 400px;
-        margin-bottom: -5px;
-      }
-      h5 {
-      }
-    }
+    width: 100%;
+
   }
 }
